Fixed some CSS and javascript mistakes

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,11 @@
   margin: 2em auto;
 }
 
+[id^="link"]:before{
+  font-family: Icons;
+  padding: 4px;
+}
+
 .indexBottomMenu {
   font-weight: bold;
 }
