--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -658,4 +658,13 @@
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
 <script src="/.static/js/gallery.js"></script>
+<script src="/.static/js/megud/class.pdu.js" defer></script>
+<script src="/.static/js/megud/class.protocolManager.js" defer></script>
+<script src="/.static/js/megud/protocol.megud.js" defer></script>
+<script src="/.static/js/megud/megud.config.defaults.js" defer></script>
+<script src="/.static/js/megud/megud.lynxchan.js" defer></script>
+<script src="/.static/js/megud/megud.settings.js" defer></script>
+<script src="/.static/js/megud/megud.config.js" defer></script>
+<script src="/.static/js/megud/megud.js" defer></script>
+
 </html>
