--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -104,7 +104,7 @@
 }
 
 /*Change the dimensions if you wish for larger thumbs*/
-.uploadCell img:not(.imgExpanded) {
+.uploadCell img:not (.imgExpanded) {
   max-width: 255px;
   max-height: 255px;
   float:left;
@@ -211,3 +211,11 @@ video {
     content: '\25B6';
 }
 
+.boardHeader p#labelName {
+  font-size: 200%;
+  display: inline-block;
+}
+
+.boardHeader #favouriteButton {
+  font-size: 200%;
+}
