--- a/templates/pages/accountManagement.html
+++ b/templates/pages/accountManagement.html
@@ -97,5 +97,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/accountManagement.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
