--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -568,5 +568,6 @@
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/embed.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
