--- a/templates/pages/boardModeration.html
+++ b/templates/pages/boardModeration.html
@@ -157,5 +157,6 @@
 <script src="/.static/js/reports.js"></script>
 <script src="/.static/js/boardModeration.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
