--- a/templates/pages/bypass.html
+++ b/templates/pages/bypass.html
@@ -99,5 +99,6 @@
 <script src="/.static/js/bypass.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
