--- a/templates/pages/hashBans.html
+++ b/templates/pages/hashBans.html
@@ -105,5 +105,6 @@
 <script src="/.static/js/hashBans.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
