--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -222,5 +222,6 @@
 <script src="/.static/js/login.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
