--- a/templates/pages/message.html
+++ b/templates/pages/message.html
@@ -31,5 +31,6 @@
 
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
