--- a/templates/pages/rangeBans.html
+++ b/templates/pages/rangeBans.html
@@ -107,5 +107,6 @@
 <script src="/.static/js/rangeBans.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
