--- a/templates/pages/ruleManagement.html
+++ b/templates/pages/ruleManagement.html
@@ -79,5 +79,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/ruleManagement.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
