--- a/static/css/boardContent.css
+++ b/static/css/boardContent.css
@@ -182,3 +182,14 @@
 .modalCaptchaControls input, .modalOkButton {
   margin-right: 10px;
 }
+
+#favouriteButton:before {
+  font-family: Icons;
+  content: "\e0c2";
+  margin-left: 0.5em;
+  cursor: pointer;
+}
+
+.checkedFavouriteButton:before {
+  color: #FFB300;
+}
