--- a/templates/pages/404.html
+++ b/templates/pages/404.html
@@ -11,6 +11,22 @@
   rel="stylesheet" />
 </head>
 <body>
+   <nav>
+    <span id="navLinkSpan"> <span>[</span> <a
+        href="/"
+        class="coloredIcon"
+        id="navLinkHome">home</a> <span>/</span> <a
+        href="/boards.js"
+        class="coloredIcon"
+        id="navBoardList">boards</a> <span>/</span> <a
+        href="/overboard"
+        class="coloredIcon"
+        id="navOverboard">overboard</a> <span>/</span> <a
+        href="/.static/posting.html"
+        class="coloredIcon"
+        id="navPosting">help</a> <span>]</span>
+    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
+  </nav>
   <header>
     <img
       src="/.static/logo.png"
