--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -253,5 +253,6 @@
 <script src="/.static/js/account.js"></script>
 <script src="/.static/js/captcha.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
