--- a/templates/pages/accounts.html
+++ b/templates/pages/accounts.html
@@ -84,5 +84,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/accounts.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
