--- a/templates/pages/bannerManagement.html
+++ b/templates/pages/bannerManagement.html
@@ -90,5 +90,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/bannerManagement.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
