--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -65,7 +65,9 @@
 
   <header class="boardHeader">
     <img id="bannerImage" />
-    <p id="labelName"></p>
+    <div>
+      <p id="labelName"></p>
+    </div>
     <p id="labelDescription"></p>
   </header>
 
@@ -423,13 +425,6 @@
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
-<script src="/.static/js/megud/class.pdu.js" defer></script>
-<script src="/.static/js/megud/class.protocolManager.js" defer></script>
-<script src="/.static/js/megud/protocol.megud.js" defer></script>
-<script src="/.static/js/megud/megud.config.defaults.js" defer></script>
-<script src="/.static/js/megud/megud.lynxchan.js" defer></script>
-<script src="/.static/js/megud/megud.settings.js" defer></script>
-<script src="/.static/js/megud/megud.config.js" defer></script>
-<script src="/.static/js/megud/megud.js" defer></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
