--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -295,5 +295,6 @@
 <script src="/.static/js/catalog.js"></script>
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/watcher.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
