--- a/templates/pages/filterManagement.html
+++ b/templates/pages/filterManagement.html
@@ -99,5 +99,6 @@
 
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
