--- a/templates/pages/globalManagement.html
+++ b/templates/pages/globalManagement.html
@@ -234,5 +234,6 @@
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/thumbs.js"></script>
 <script src="/.static/js/embed.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
