--- a/templates/pages/globalSettings.html
+++ b/templates/pages/globalSettings.html
@@ -713,5 +713,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/globalSettings.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
