--- a/templates/pages/languages.html
+++ b/templates/pages/languages.html
@@ -92,5 +92,6 @@
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/languages.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
