--- a/templates/pages/rangeBanPage.html
+++ b/templates/pages/rangeBanPage.html
@@ -44,5 +44,6 @@
 
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
 
 </html>
