--- a/static/css/global.css
+++ b/static/css/global.css
@@ -112,21 +112,12 @@ header {
     margin: 3em auto 0 auto;
     text-align: center;
 }
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #193447;
-    padding-bottom: 3px;
-    font-size: 70%;
-    text-align: center;
-    z-index: 1;
-}
 nav span,
 nav a {
     display: inline-block;
     text-decoration: none;
     margin: 0 0.2em;
+    float: left;
 }
 #navLinkSpan {
     float: left;
@@ -575,14 +566,12 @@ span.spoiler:hover {
 nav {
     border-bottom: 1px solid #FFCCCB;
     margin: 0 0.2em;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding: 1px;
     background-color: #FFCCCB;
     position: fixed;
     top: 0;
     width: 100%;
     font-size: 70%;
-    text-align: center;
     z-index: 1;
 }
 .reportFieldset {
@@ -690,3 +679,4 @@ a.nameLink {
 .spoiler .embedButton {
     color:#000000;
 } 
+
