--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -20,7 +20,7 @@
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.unhideButton {
+.unhideButton, .embedButton {
   clear: left;
   cursor: pointer;
   font-size: 80%;
