--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -49,7 +49,8 @@
   </header>
 
   <div id="threadList">
-
+  <hr>
+  <div id="pleaseloveus"><a href="https://www.redbubble.com/people/mewch-net?asc=u"><img src="/.static/mewch_merch3.png"></a></div>
     <form
       action="/contentActions.js"
       method="post"
