--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -269,7 +269,8 @@
   </div>
 
   <div id="threadList">
-
+  <hr>
+  <div id="pleaseloveus"><a href="https://www.redbubble.com/people/mewch-net?asc=u"><img src="/.static/mewch_merch3.png"></a></div>
     <form
       action="/contentActions.js"
       method="post"
