--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -416,7 +416,8 @@
   </div>
 
   <div id="threadList">
-
+  <hr>
+  <div id="pleaseloveus"><a href="https://www.redbubble.com/people/mewch-net?asc=u"><img src="/.static/mewch_merch3.png"></a></div>
     <form
       method="post"
       action="/contentActions.js"
