--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -417,7 +417,7 @@
 
   <div id="threadList">
   <hr>
-  <div id="pleaseloveus"><a href="https://www.redbubble.com/people/mewch-net?asc=u"><img src="/.static/mewch_merch3.png"></a></div>
+  <div id="pleaseloveus" style="text-align: center;"><a href="https://www.redbubble.com/people/mewch-net?asc=u"><img src="/.static/mewch_merch3.png"></a></div>
     <form
       method="post"
       action="/contentActions.js"
