Added radio and donate to nav

--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -28,6 +28,12 @@
         href="/overboard"
         class="coloredIcon"
         id="navOverboard">overboard</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navDonate">donate</a> <span>/</span> <a
+        href="http://radio.mewch.net"
+        class="coloredIcon"
+        id="navRadio">radio</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
         id="navPosting">help</a> <span>]</span>
