--- a/templates/pages/bans.html
+++ b/templates/pages/bans.html
@@ -20,6 +20,12 @@
         id="navBoardList">boards</a> <span>/</span> <a
         href="/overboard"
         id="navOverboard">overboard</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navDonate">donate</a> <span>/</span> <a
+        href="http://radio.mewch.net"
+        class="coloredIcon"
+        id="navRadio">radio</a> <span>/</span> <a
         href="/.static/posting.html"
         id="navPosting">help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
