--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -27,6 +27,12 @@
         class="coloredIcon"
         id="linkOverboard">overboard</a> <span>/</span> <a id="linkSfwOver">overboard
         sfw</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navDonate">donate</a> <span>/</span> <a
+        href="http://radio.mewch.net"
+        class="coloredIcon"
+        id="navRadio">radio</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
         id="navPosting">help</a> <span>]</span>
