--- a/templates/pages/overboard.html
+++ b/templates/pages/overboard.html
@@ -36,6 +36,12 @@
         href="/boards.js"
         class="coloredIcon"
         id="navBoardList">boards</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navDonate">donate</a> <span>/</span> <a
+        href="http://radio.mewch.net"
+        class="coloredIcon"
+        id="navRadio">radio</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
         id="navPosting">help</a> <span>]</span>
