--- a/static/css/global.css
+++ b/static/css/global.css
@@ -128,6 +128,12 @@ nav a {
 #navOptionsSpan {
     float: right;
 }
+#navRadio:before {
+    content: "\266B";
+}
+#navDonate:before {
+    content: "\2764";
+}
 #navLinkHome:before {
     content: "\e082";
 }
