Temp fix for static pages

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -23,6 +23,11 @@
 .small a {
     text-decoration: none;
 }
+//Temp fix, clean this up soon
+[id^="nav"]::before{
+    font-family: Icons;
+    margin-right: 0.25em;
+}
 #postingForm button,
 #qrbutton {
     width: 8em;
