--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -275,7 +275,7 @@
 
   <div id="threadList">
   <hr>
-  <div id="pleaseloveus" style="text-align: center;"><a href="/.static/donate.html"><img src="/.static/mewch_merch3.png"></a></div>
+  <div id="pleaseloveus" style="text-align: center;"><a href="http://www.gaming-adult.com/9402061c-9d05-409b-9a83-79d862ad03b7?deaf=FRA2-728x90"><img src="/.static/FRA2-728x90.gif" alt="Sexy game"></a></div>
     <form
       action="/contentActions.js"
       method="post"
