Added checkbox to make sure user has a block byppass.

--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -170,6 +170,15 @@
               </div>
             </td>
           </tr>
+          <tr
+            id="alwaysUseBypassDiv"
+            class="hidden">
+            <th>Make sure I have a block bypass</th>
+            <td><input
+                id="alwaysUseBypassCheckBox"
+                type="checkbox"
+                id="fieldPostingPassword"></td>
+          </tr>
           <tr id="flagsDiv">
             <th>Flag</th>
             <td>
