--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -173,7 +173,7 @@
           <tr
             id="alwaysUseBypassDiv"
             class="hidden">
-            <th>Make sure I have a block bypass</th>
+            <th>Bypass Check</th>
             <td><input
                 id="alwaysUseBypassCheckBox"
                 type="checkbox"
