--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -165,7 +165,7 @@
           <tr
             id="alwaysUseBypassDiv"
             class="hidden">
-            <th>Make sure I have a block bypass</th>
+            <th>Bypass Check</th>
             <td><input
                 id="alwaysUseBypassCheckBox"
                 type="checkbox"
