--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -51,7 +51,7 @@
     <div
       id="infoBox"
       class="title">
-      <p>Insert title here</p>
+      <h1>117Chan</h1>
     </div>
 
     <div
@@ -120,7 +120,7 @@
   </div>
 
   <footer>
-    <span>Insert footer here</span>
+    <span>Copyright © 2018 117chan Development Team</span>
   </footer>
 
 </body>
